HttpUnit release notes

Known problems:
    1. The "_parent" and "_empty" frame targets are not handled correctly
    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.
    3. The regression test "pseudo-server" does not appear to run properly under JDK 1.4

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:
10-Jul-2002
Additions:
    1. WebResponse and WebCell now support a new method, getImages, which returns an array of objects representing the
       image tags found.

25-Jun-2002
Additions:
    1. The HttpUnitOption property 'acceptCookies' now controls whether cookies received from the server will be saved
       in a web client and sent on subsequent requests. The default is true.

23-Jun-2002
Acknowledgements:
    Thanks to Steve Heath for an example on how to make JSPs work with ServletUnit.

Additions:
    1. ServletUnit now supports ServletContext.getRealPath
    2. ServletUnit now supports JSPs using Jasper. By default, JSPs are expected to be in the current working directory.
       If an external web.xml file is specified, JSPs will be searched for in the application context directory.

20-Jun-2002 1.4.1
Acknowledgements:
    Thanks to Stefan Renz for finding the file control value bug and providing a fix.
    Thanks to Frank Carver for extending base 64 encoding to handle character values > 127.
    Thanks to Yassen Damyanov for fixing a bug in the handling response headers
    Thanks to James Murty for adding caching of servlet instances and some XML parsing cleanup.
    Thanks to Robert Watkins for the content length test.
    Thanks to Jessica Sant for correcting the handling of error statuses in JDK 1.3.1-03

Problems fixed:
    1. Trying to get the value of a file parameter no longer results in a null pointer exception.