@@ -1,7 +1,7 @@
 HttpUnit release notes
 
 Known problems:
-    1. The "_parent" and "_empty" frame targets are not handled correctly
+    1. The "_new" and "_empty" frame targets are not handled correctly
     2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
        This behavior matches that currently used by IE and Navigator.
     3. The regression test "pseudo-server" does not appear to run properly under JDK 1.4
@@ -12,6 +12,10 @@ Limitations:
 
 
 Revision History:
+15-Jul-2002
+Problems fixed:
+    1. The "_parent" frame target should now be handled correctly.
+
 10-Jul-2002
 Additions:
     1. WebResponse and WebCell now support a new method, getImages, which returns an array of objects representing the
